# Microcontrollers

./: .gitignore  Arduino_Projects.sublime-workspace  README.md
Ambient_Lighting/: Ambient_Lighting.ino
Ambient_Lighting/Smooth_Transitions/: Smooth_Transitions.ino
Blink/: Blink.ino
CircuitPython_Libraries/adafruit-circuitpython-bundle-4.x-mpy-20191012/: VERSIONS.txt
CircuitPython_Libraries/adafruit-circuitpython-bundle-4.x-mpy-20200114/: VERSIONS.txt
CircuitPython_Libraries/adafruit-circuitpython-bundle-5.x-mpy-20191211/: VERSIONS.txt
CircuitPython_Libraries/adafruit-circuitpython-bundle-6.x-mpy-20201104/: VERSIONS.txt
CircuitPython_Libraries/adafruit-circuitpython-bundle-6.x-mpy-20201212/: VERSIONS.txt
CircuitPython_Libraries/adafruit-circuitpython-bundle-6.x-mpy-20201225/: VERSIONS.txt
CircuitPython_Libraries/adafruit-circuitpython-bundle-6.x-mpy-20210407/: VERSIONS.txt
Circuit_Playground/CircuitPython/: IR_test.py  adafruit-circuitpython-circuitplayground_express_crickit-3.0.1.uf2  bike_light.py  blink.py  blink_pwm.py  boot.py  capacative_touch.py  check_IR_signals.py  cpx_modules.py  crickit_play_audio.py  darth_vader_cpx.py  fishing.py  flash  light_analog_w_cpx.py  (+19 more)
Clue/: auto_watering.py  auto_watering_standalone.py
FeatherSD/: FeatherSD.ino
FrSky/: FrSky.ino
FreeSix/: FreeSix.ino
GPS/: gps_plots.py  process_GPS_code.m
GPS_Only/: GPS_Only.ino
GPS_Shield/: GPS_Shield.ino
HalloWing/: Spooky_Eye_Human.UF2  Spooky_Eye_Terminator.UF2
Load_Cell/: Load_Cell.ino
M4SK/: flash
MagTag/: MagTag_Office.py  demo.py  merry_christmas_neopixel_ver1.py
Matrix/: clock_and_weather.py  esp_wifi_example.py
NALU/: README.md
Pico/: MachJag_RSCD_program.py
Pitot_Demo/: Pitot_Demo.ino
Proximity/: Proximity.ino
PyGamer/: goal.py  score_a_goal.py  ugame_tutorial.py
PyPortal/: flash  get_temp_light.py  get_temp_light_D3_D4.py  log_solar_panel_health.py  logtemperature.py  logtemperature_final.py  logtemperature_keep_screen_on.py  quotes.py  secrets.py  simple_light_temp.py  temp_light_plotter.py
RaspberryPi/: README_MiniCom  README_SSH  RPi_Setup_README  led.py  pantilt.py  rc.local.example  read_serial_cpb.py
Retro_Pi_Case/: HDMI_Monitor.blend  HDMI_Monitor_JOINED.blend  Pi_Zero.blend  Pi_Zero_JOINED.blend  Retro_Pi.blend  Retro_Pi.stl  Retro_Pi_Bottom.stl  Retro_Pi_Top_Plate.stl
SD_Breakout/: SD_Breakout.ino
Serial_Array_Handshake/: Serial_Array_Handshake.ino
Serial_Example/: Serial_Example.ino
SixDOF_Demo/: SixDOF_Demo.ino
Smooth_Transitions/: Smooth_Transitions.ino
WifiChip/: Tutorials
YMFC/: Website_URL
libraries/: readme.txt
stm32u545/: Readme.md
stm32u545/embassy-salt-main-master/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
stm32u545/embassy-salt-main-master/.cargo/: config.toml
stm32u545/embassy-salt-main-master/src/: adxl375.rs  can_tx.rs  gps.rs  iis2mdctr.rs  lis3dh.rs  lsm6dsox.rs  main.rs  ms5611.rs  registers.rs  sensors.rs  usb_serial.rs  w25q128jvs.rs
stm32u545/zenith-example/: Cargo.toml
stm32u545/zenith-example/.cargo/: config.toml
stm32u545/zenith-example/src/: main.rs
wavs/: r2d2squeaks5.c
(+1688 files in other folders)
