[package]
name = "zenith-example"
version = "0.1.0"
edition = "2024"

[dependencies]
# Change stm32u5g9zj to your chip name, if necessary.
#Remove the path variable completely as well
#make sure you also have the crates extension
embassy-stm32 = { version = "0.4.0", features = ["defmt", "unstable-pac", "stm32u545ce", "time-driver-any", "memory-x" ]  }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0",features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0",features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1",features = ["defmt"] }
embassy-futures = { version = "0.1.2"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
embedded-graphics = { version = "0.8.1" }
tinybmp = { version = "0.6.0" }

micromath = "2.0.0"

[features]
## Use secure registers when TrustZone is enabled
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/stm32u5" }
]